// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": e {
    "baseHash": -896292855,
    "baseStyle": undefined,
    "componentId": "Body-e0mu8o-0",
    "isStatic": false,
    "rules": Array [
      "grid-area:body;display:flex;flex-direction:column;align-items:flex-start;justify-content:center;",
      [Function],
    ],
    "staticRulesId": "",
  },
  "displayName": "Body",
  "foldedComponentIds": Array [],
  "render": [Function],
  "shouldForwardProp": undefined,
  "styledComponentId": "Body-e0mu8o-0",
  "target": "div",
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[` 2`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": e {
    "baseHash": 904149841,
    "baseStyle": undefined,
    "componentId": "Detail-sc-1h8mdse-0",
    "isStatic": false,
    "rules": Array [
      "display:block;grid-area:detail;color:",
      [Function],
      ";font-size:",
      [Function],
      ";margin:0 0 auto;",
    ],
    "staticRulesId": "",
  },
  "displayName": "Detail",
  "foldedComponentIds": Array [],
  "render": [Function],
  "shouldForwardProp": undefined,
  "styledComponentId": "Detail-sc-1h8mdse-0",
  "target": "span",
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[` 3`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": e {
    "baseHash": -1056806401,
    "baseStyle": undefined,
    "componentId": "Graphic-sc-1emua2x-0",
    "isStatic": false,
    "rules": Array [
      "display:flex;align-items:center;justify-content:center;flex:0 0 auto;color:",
      [Function],
      ";letter-spacing:unset;svg{letter-spacing:normal;}",
    ],
    "staticRulesId": "",
  },
  "displayName": "Graphic",
  "foldedComponentIds": Array [],
  "render": [Function],
  "shouldForwardProp": undefined,
  "styledComponentId": "Graphic-sc-1emua2x-0",
  "target": "div",
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[` 4`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": e {
    "baseHash": -1664101611,
    "baseStyle": undefined,
    "componentId": "Message-sc-6slmuq-0",
    "isStatic": false,
    "rules": Array [
      "grid-area:message;line-height:",
      [Function],
      ";margin:auto 0 0;display:block;&:last-of-type{margin:auto 0;}",
    ],
    "staticRulesId": "",
  },
  "displayName": "Message",
  "foldedComponentIds": Array [],
  "render": [Function],
  "shouldForwardProp": undefined,
  "styledComponentId": "Message-sc-6slmuq-0",
  "target": "span",
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[` 5`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "attrs": Array [],
  "componentStyle": e {
    "baseHash": 1003129407,
    "baseStyle": undefined,
    "componentId": "Wrap-vog3nk-0",
    "isStatic": false,
    "rules": Array [
      "display:grid;grid-template-areas:\\"graphic body\\";align-items:center;justify-content:center;padding:",
      "
    calc(var(--SPACING_BASE) * 2 * 1px)",
      ";",
      [Function],
      " ",
      [Function],
    ],
    "staticRulesId": "",
  },
  "displayName": "Wrap",
  "foldedComponentIds": Array [],
  "render": [Function],
  "shouldForwardProp": undefined,
  "styledComponentId": "Wrap-vog3nk-0",
  "target": "div",
  "toString": [Function],
  "warnTooManyClasses": [Function],
  "withComponent": [Function],
}
`;

exports[`Status matches snapshot 1`] = `
<Wrap
  isBlock={false}
>
  <Graphic
    graphicColor={[Function]}
  >
    <GraphicStatusIndeterminate
      isBlock={false}
    />
  </Graphic>
  <Body
    isBlock={false}
  />
</Wrap>
`;
